# studynotes

./: README
c++/: README
c++/1_make01/: Makefile  README
c++/1_make02/: Makefile  README  hello.cpp
c++/1_make03/: Makefile  README
c++/1_make03/src/: hellofunc.cpp
c++/1_make04/: README
c++/1_make04/anitalk/: Makefile
c++/2_autotools01/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
c++/2_autotools01/.deps/: sqroot.Po
c++/2_autotools02/: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac
c++/3_cmake01/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
c++/3_cmake02/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  sqroot.cpp
c++/3_cmake03/: CMakeCache.txt  CMakeLists.txt  Makefile  README  SqrootConfig.h.in  cmake_install.cmake  sqroot.cpp
c++/3_cmake03/libs/: Makefile  cmake_install.cmake
c++/3_cmake04/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  sqroot.cpp
c++/3_cmake04/libs/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.cpp
c++/3_cmake05/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README  SqrootConfig.h  cmake_install.cmake
c++/3_cmake05/libs/: CMakeLists.txt  Makefile  cmake_install.cmake  mysqrt.h
c++/3_cmake06/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README  SqrootConfig.h  SqrootConfig.h.in  cmake_install.cmake
c++/3_cmake06/libs/: Makefile  cmake_install.cmake  mysqrt.cpp
c++/4_tup01/: README  Tupfile  hello.c
c++/4_tup01/.tup/: db
c++/4_tup02/: README  Tupfile
c++/4_tup02/.tup/: db
c++/4_tup03/: README  square.h
c++/4_tup03/.tup/: db
c++/4_tup04/: README  Tupfile  hello.c
c++/4_tup04/.tup/: db
c++/4_tup05/: README  Tupfile  header.txt  output.txt
c++/4_tup05/.tup/: db
c++/4_tup06/: README  Tupfile  hello.c
c++/4_tup06/.tup/: db
c++/4_tup07/: README  Tupfile  Tuprules.tup  hello.c
c++/4_tup07/.tup/: db
c++/4_tup07/newmath/: Tupfile
go/00_hello/: README  hello.go
go/00_hello2/: hello2.go
go/00_stringutil/: README  reverse.go
go/01_packages/: packages.go
go/02_functions/: functions.go
go/03_basictypes/: basic-types.go
go/04_flowcontrol/: exercise1.go  flowcontrol.go
go/05_pointers/: pointers.go
go/06_structs/: structs.go
go/07_arrays/: array.go
go/08_range/: range.go
go/10_maps/: maps.go
go/11_functionvalues/: function-values.go
go/12_methods/: methods.go
go/13_interfaces/: interfaces.go
go/14_typeswitch/: type-switches.go
go/15_stringer/: stringer.go
go/16_errors/: errors.go
go/17_readers/: readers.go
go/18_images/: images.go
go/19_goroutines/: goroutines.go
go/20_channels/: channels.go
go/21_select/: select.go
go/22_mutex/: mutex.go
go/23_marshal/: marshal.go
go/24_iota/: iota.go
go/hn_utility/: hn.go
go/tmp01/: pointerex.go
rust/cache_01/: Cargo.toml
rust/cache_01/src/: main.rs
rust/calcz/: Cargo.toml
rust/calcz/src/: lib.rs  main.rs
rust/chttp_01/: Cargo.toml
rust/chttp_01/src/: main.rs
rust/cli01/: Cargo.toml
rust/cli01/src/: main.rs
rust/curl_01/: Cargo.toml
rust/curl_01/src/: main.rs
rust/digest_01/: Cargo.toml
rust/futures_01/: Cargo.toml
rust/futures_01/src/: main.rs
rust/futures_02/: Cargo.toml
rust/futures_02/src/: main.rs
rust/futures_03/: Cargo.toml
rust/futures_03/src/: lib.rs  main.rs
rust/futures_04/: Cargo.toml
rust/futures_04/src/: main.rs
rust/hyper01/: Cargo.toml
rust/hyper01/src/: main.rs
rust/hyper02/: Cargo.toml
rust/hyper02/src/: main.rs
rust/lesson01/: hello01.rs
rust/lesson02/: Cargo.toml
rust/lesson02/src/: main.rs
rust/lesson03/: Cargo.toml  README
rust/lesson03/src/: main.rs
rust/lesson04/: Cargo.toml
rust/lesson04/src/: main.rs
rust/lesson05/: Cargo.toml
rust/lesson05/src/: main.rs
rust/lesson06/: Cargo.toml
rust/lesson06/src/: main.rs
rust/lesson07/: Cargo.toml
rust/lesson07/src/: main.rs
rust/lesson08/: Cargo.toml
rust/lesson08/src/: main.rs
rust/lesson09/: Cargo.toml
rust/lesson09/src/: main.rs
rust/lesson10/: Cargo.toml
rust/lesson10/src/: main.rs
rust/lesson11/: Cargo.toml
rust/lesson11/src/: main.rs
rust/lesson12/: Cargo.toml
rust/lesson12/src/: main.rs
rust/lesson13/: Cargo.toml
rust/lesson13/src/: main.rs
rust/lesson14/: Cargo.toml
rust/lesson14/src/: main.rs
rust/lesson15/: Cargo.toml
rust/lesson15/src/: main.rs
rust/lesson16/: Cargo.toml
rust/lesson16/src/: main.rs
rust/lesson17/: Cargo.toml
rust/lesson17/src/: main.rs
rust/lesson18/: Cargo.toml
rust/lesson18/src/: client1.rs  lib.rs
rust/lesson18/src/network1/: mod.rs  server1.rs
rust/lesson19/: Cargo.toml
rust/lesson19/src/: main.rs
rust/lesson20/: Cargo.toml
rust/lesson20/src/: main.rs
rust/lesson21/: Cargo.toml
rust/lesson21/src/: main.rs
rust/lesson22/: Cargo.toml
rust/lesson22/src/: main.rs
rust/lesson23/: Cargo.toml
rust/lesson23/src/: main.rs
rust/lesson24/: Cargo.toml
rust/lesson24/src/: main.rs
rust/lesson25/: Cargo.toml
rust/lesson25/src/: lib.rs
rust/lesson25/tests/: integration_tests.rs
rust/lesson25/tests/common/: mod.rs
rust/lesson26/: Cargo.toml
rust/lesson26/src/: main.rs
rust/lesson27/src/: lib.rs  main.rs
rust/lesson28/: Cargo.toml
rust/lesson28/src/: main.rs
rust/lesson29/: Cargo.toml
rust/lesson29/src/: main.rs
rust/lesson30/: Cargo.toml
rust/lesson30/src/: main.rs
rust/lesson31/: Cargo.toml
rust/lesson31/src/: lib.rs  main.rs
rust/lesson32/: Cargo.toml
rust/lesson32/src/: main.rs
rust/lesson33/: Cargo.toml
rust/mio_01/: Cargo.toml
rust/mio_01/src/: main.rs
scala/calculator/: .cache-main  .cache-tests  .classpath
scala/calculator/web-ui/: .classpath  .project
scala/progfun2/: .project
scala/progfun2/.worksheet/src/: main.scala.generators.scala  main.scala.initialtest.scala  week1.Recap.scala  week2.blah.scala  (+2 more)
scala/quickcheck/: .cache-main  .cache-tests
scala/streams/: .cache-main  .cache-tests
(+18 files in other folders)
